Dando estilos a la pagina

--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
     <div class="contenedor-header">
         <header>
             <div class="logo">
-                <a href="#">Angel</a>
+                <a href="#">Luis Angel Santos</a>
             </div>
             <nav id="nav">
                 <ul>
                     <li><a href="#inicio" onclick="seleccionar()">INICIO</a></li>
                     <li><a href="#sobremi" onclick="seleccionar()">SOBRE MI</a></li>
                     <li><a href="#skills" onclick="seleccionar()">HABILIDADES</a></li>
-                    <li><a href="#curriculum" onclick="seleccionar()">CURRICULUM</a></li>
                     <li><a href="#portfolio" onclick="seleccionar()">PORTFOLIO</a></li>
                     <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li>
                 </ul>
@@ -35,8 +34,8 @@
             <div class="contenedor-img">
                 <img src="img/hero.png" alt="">
             </div>
-            <h1>NICK PEREZ</h1>
-            <h2>Ingeniero de Software - Experto UI/UX</h2>
+            <h1>LUIS ANGEL SANTOS ISLAS</h1>
+            <h2>Ingeniero en Desarrollo y Gestión de Software</h2>
             <div class="redes">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -89,7 +88,7 @@
                     <div class="contenedor-intereses">
                         <div class="interes">
                             <i class="fa-solid fa-gamepad"></i>
-                            <span>VIDEOJUEGOS</span>
+                            <span>JUEGOS</span>
                         </div>
                         <div class="interes">
                             <i class="fa-solid fa-headphones"></i>
@@ -100,11 +99,11 @@
                             <span>VIAJAR</span>
                         </div>
                         <div class="interes">
-                            <i class="fa-brands fa-apple"></i>
-                            <span>PROGRAMACIÓN</span>
+                            <i class="fa-solid fa-code"></i>
+                            <span>PROGRAMAR</span>
                         </div>
                         <div class="interes">
-                            <i class="fa-solid fa-person-hiking"></i>
+                            <i class="fa-solid fa-futbol"></i>
                             <span>DEPORTE</span>
                         </div>
                         <div class="interes">
