Agregando funcionalidades de las habilidades y menu responsive

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <section id="inicio" class="inicio">
         <div class="contenido-banner">
             <div class="contenedor-img">
-                <img src="img/hero.png" alt="">
+                <img src="assets/img/angel.png" alt="">
             </div>
-            <h1>LUIS ANGEL SANTOS ISLAS</h1>
+            <h1>Luis Angel</h1>
             <h2>Ingeniero en Desarrollo y Gestión de Software</h2>
             <div class="redes">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -111,8 +111,8 @@
                             <span>LIBROS</span>
                         </div>
                         <div class="interes">
-                            <i class="fa-solid fa-car"></i>
-                            <span>...</span>
+                            <i class="fa-solid fa-language"></i>
+                            <span>IDIOMAS</span>
                         </div>
                         <div class="interes">
                             <i class="fa-solid fa-camera"></i>
@@ -155,7 +155,7 @@
                         <span>GitHub</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>90%</span>
+                                <span>95%</span>
                             </div>
                         </div>
                     </div>
@@ -284,7 +284,7 @@
     </footer>
 
 
-    <script src="script.js"></script>
+    <script src="js/main.js"></script>
     <script src="https://kit.fontawesome.com/f7abec8abf.js" crossorigin="anonymous"></script>
 </body>
 </html>
