Terminando estilos y modificaando datos personales

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Mi portafolio</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
                     <li><a href="#inicio" onclick="seleccionar()">INICIO</a></li>
                     <li><a href="#sobremi" onclick="seleccionar()">SOBRE MI</a></li>
                     <li><a href="#skills" onclick="seleccionar()">HABILIDADES</a></li>
-                    <li><a href="#portfolio" onclick="seleccionar()">PORTFOLIO</a></li>
+                    <li><a href="#portfolio" onclick="seleccionar()">PORTAFOLIO</a></li>
                     <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li>
                 </ul>
             </nav>
@@ -38,10 +39,9 @@
             <h2>Ingeniero en Desarrollo y Gestión de Software</h2>
             <div class="redes">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-skype"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="#"><i class="fa-solid fa-rss"></i></a>
+                <a href="https://github.com/Luis-Angel-Santos/"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/dev-web-jr-luisangelsantos/"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="mailto:santosangel748@gmail.com?Subject=Hey!%20quiero%20contactarte"><i class="fa-solid fa-envelope"></i></i></a>
             </div>
         </div>
     </section>
@@ -50,7 +50,9 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Luis Angel Santos.</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam unde soluta minima necessitatibus, voluptas consectetur vero officiis quas, explicabo deleniti repellendus aliquid debitis maiores numquam voluptate reprehenderit in delectus dolores.</p>
+            <p><span>Hola, soy Luis Angel Santos.</span> Tengo 21 años y actualmente estoy estudiando Desarrollo y Gestión de Software en la Universidad Tecnologica de Tlaxcala. Me enamore de la programación desde los 16 años y desde entonces he tenido un mundo a descubrir. Mi principal area es el desarrollo web, pero soy capaz de manejar distintos ambientes de desarrollo si asi se requiere.</p>
+            <p style="text-align: center;">"No documentes el problema; arréglalo"</p>
+            <br>
             <div class="fila">
                 <!-- datos personales -->
                 <div class="col">
@@ -58,23 +60,19 @@
                     <ul>
                         <li>
                             <strong>Cumpleaños</strong>
-                            09-02-2001
+                            09 de febrero
                         </li>
                         <li>
                             <strong>Teléfono</strong>
-                            0000000
+                            +52 241 239 4657
                         </li>
                         <li>
                             <strong>Email</strong>
-                            cw@example.com
-                        </li>
-                        <li>
-                            <strong>Website</strong>
-                            www.example.com
+                            santosangel748@gmail.com
                         </li>
                         <li>
                             <strong>Dirección</strong>
-                            México
+                            Tlaxcala, México
                         </li>
                         <li>
                             <strong>Cargo</strong>
@@ -122,7 +120,7 @@
                 </div>
             </div>
             <button>
-                Descargar CV <i class="fa-solid fa-download"></i>
+                <a href="assets/cv.pdf" class="cv-5">Descargar CV <i class="fa-solid fa-download"></i></a>
                 <span class="overlay"></span>
             </button>
         </div>
@@ -226,8 +224,8 @@
     <!-- SECCION PORTFOLIO -->
     <section id="portfolio" class="portfolio">
         <div class="contenido-seccion">
-            <h2>PORTFOLIO</h2>
-            <p>En construcción</p>
+            <h2>PORTAFOLIO</h2>
+            <p>En construcción.....</p>
         </div>
     </section>
     <section id="contacto" class="contacto">
@@ -242,13 +240,13 @@
                     <input type="text" placeholder="Tema">
                     <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
                     <button>
-                        Enviar Mensaje<i class="fa-solid fa-paper-plane"></i>
+                        Enviar Mensaje <i class="fa-solid fa-paper-plane"></i>
                         <span class="overlay"></span>
                     </button>
                 </div>
                 <!-- Datos de contacto -->
                 <div class="col">
-                    <img src="img/ubicacion.png" alt="">
+                    <img src="assets/img/mapa.jpg" alt="">
                     <div class="info">
                         <ul>
                             <li>
@@ -257,11 +255,11 @@
                             </li>
                             <li>
                                 <i class="fa-solid fa-mobile-screen"></i>
-                                8263237 
+                                +52 241 239 4657 
                             </li>
                             <li>
                                 <i class="fa-solid fa-envelope"></i>
-                                Email: cw@example.com
+                                santosangel748@gmail.com
                             </li>
                         </ul>
                     </div>
@@ -276,14 +274,13 @@
         </a>
         <div class="redes">
             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-skype"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href="#"><i class="fa-solid fa-rss"></i></a>
+            <a href="https://github.com/Luis-Angel-Santos/"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/dev-web-jr-luisangelsantos/"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="mailto:santosangel748@gmail.com?Subject=Hey!%20quiero%20contactarte"><i class="fa-solid fa-envelope"></i></i></a>
+            <br>
+            <span class="">&copy; 2022 Angel Santos</span>
         </div>
     </footer>
-
-
     <script src="js/main.js"></script>
     <script src="https://kit.fontawesome.com/f7abec8abf.js" crossorigin="anonymous"></script>
 </body>
