Agregando proyectos al portafolio

--- a/index.html
+++ b/index.html
@@ -225,7 +225,44 @@
     <section id="portfolio" class="portfolio">
         <div class="contenido-seccion">
             <h2>PORTAFOLIO</h2>
-            <p>En construcción.....</p>
+            <div class="galeria">
+                <a href="https://mariogame-js.netlify.app/">
+                    <div class="proyecto">
+                    <img src="assets/img/marioGame.png" alt="">
+                    <div class="overlay">
+                        <h3>Juego de Mario</h3>
+                        <p>Desarrollado con HTML - JS - CSS</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://luis-angel-santos.github.io/Blackjack/">
+                    <div class="proyecto">
+                    <img src="assets/img/blackjack.png" alt="">
+                    <div class="overlay">
+                        <h3>BlackJack</h3>
+                        <p>Desarrollado con HTML - JS - CSS</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://luis-angel-santos.github.io/PeliculasApp/home">
+                    <div class="proyecto">
+                    <img src="assets/img/peliculas.png" alt="">
+                    <div class="overlay">
+                        <h3>App de peliculas</h3>
+                        <p>Desarrollada haciendo uso de una API</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://luis-angel-santos.github.io/appClima/">
+                    <div class="proyecto">
+                    <img src="assets/img/clima.png" alt="">
+                    <div class="overlay">
+                        <h3>App del clima</h3>
+                        <p>Desarrollada haciendo uso de una API</p>
+                        </div>
+                    </div>
+                </a>            
+            </div>
         </div>
     </section>
     <section id="contacto" class="contacto">
