Agregando proyecto: Pagina Restaurante

--- a/index.html
+++ b/index.html
@@ -261,7 +261,16 @@
                         <p>Desarrollada haciendo uso de una API</p>
                         </div>
                     </div>
-                </a>            
+                </a>   
+                <a href="https://luis-angel-santos.github.io/Pagina-de-Comida/">
+                    <div class="proyecto">
+                    <img src="assets/img/comida.png" alt="">
+                    <div class="overlay">
+                        <h3>Página de Restaurante</h3>
+                        <p>Desarrollada con HTML - CSS - JS</p>
+                        </div>
+                    </div>
+                </a>           
             </div>
         </div>
     </section>
