--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </div>
                 <!-- Professional Skills -->
                 <div class="col">
-                    <h3>Professional Skills</h3>
+                    <h3>Soft Skills</h3>
                     <div class="skill">
                         <span>Comunicación</span>
                         <div class="barra-skill">
@@ -210,7 +210,7 @@
                         </div>
                     </div>
                     <div class="skill">
-                        <span>Proyect Management</span>
+                        <span>Administración de proyectos</span>
                         <div class="barra-skill">
                             <div class="progreso">
                                 <span>89%</span>
