--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <span>GitHub</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>95%</span>
+                                <span>90%</span>
                             </div>
                         </div>
                     </div>
@@ -213,7 +213,7 @@
                         <span>Administración de proyectos</span>
                         <div class="barra-skill">
                             <div class="progreso">
-                                <span>89%</span>
+                                <span>80%</span>
                             </div>
                         </div>
                     </div>
@@ -231,7 +231,7 @@
                     <img src="assets/img/marioGame.png" alt="">
                     <div class="overlay">
                         <h3>Juego de Mario</h3>
-                        <p>Desarrollado con HTML - JS - CSS</p>
+                        <p>HTML - JS - CSS</p>
                         </div>
                     </div>
                 </a>
@@ -240,7 +240,7 @@
                     <img src="assets/img/blackjack.png" alt="">
                     <div class="overlay">
                         <h3>BlackJack</h3>
-                        <p>Desarrollado con HTML - JS - CSS</p>
+                        <p>HTML - JS - CSS</p>
                         </div>
                     </div>
                 </a>
@@ -267,7 +267,16 @@
                     <img src="assets/img/comida.png" alt="">
                     <div class="overlay">
                         <h3>Página de Restaurante</h3>
-                        <p>Desarrollada con HTML - CSS - JS</p>
+                        <p>HTML - CSS - JS</p>
+                        </div>
+                    </div>
+                </a>      
+                <a href="https://fisio.netlify.app/">
+                    <div class="proyecto">
+                    <img src="assets/img/fisio.png" alt="">
+                    <div class="overlay">
+                        <h3>FISIO</h3>
+                        <p>Angular v15 - TypeScript - NodeJS</p>
                         </div>
                     </div>
                 </a>           
@@ -280,12 +289,12 @@
             <div class="fila">
                 <!-- Formulario -->
                 <div class="col">
-                    <input type="text" placeholder="Tú Nombre">
-                    <input type="text" placeholder="Número telefónico">
-                    <input type="text" placeholder="Dirección de correo">
-                    <input type="text" placeholder="Tema">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
-                    <button>
+                    <input type="text" class="datosContacto" placeholder="Tú Nombre">
+                    <input type="text" class="datosContacto" placeholder="Número telefónico">
+                    <input type="text" class="datosContacto" placeholder="Dirección de correo">
+                    <input type="text" class="datosContacto" placeholder="Tema">
+                    <textarea name="" class="datosContacto" cols="30" rows="10" placeholder="Mensaje"></textarea>
+                    <button onclick="contacto()">
                         Enviar Mensaje <i class="fa-solid fa-paper-plane"></i>
                         <span class="overlay"></span>
                     </button>
