Agreando proyecto Jokes - Cambiando algunos estilos

--- a/index.html
+++ b/index.html
@@ -279,6 +279,15 @@
                         <p>Angular v15 - TypeScript - NodeJS</p>
                         </div>
                     </div>
+                </a>   
+                <a href="https://jokes-app-lasi.netlify.app/">
+                    <div class="proyecto">
+                    <img src="assets/img/jokes.png" alt="">
+                    <div class="overlay">
+                        <h3>Jokes App</h3>
+                        <p>Angular v15 - TypeScript - NodeJS - Desarrollada haciendo uso de una API</p>
+                        </div>
+                    </div>
                 </a>           
             </div>
         </div>
