Agregando proyecto de HeroesApp

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <div class="galeria">
                 <a href="https://mariogame-js.netlify.app/">
                     <div class="proyecto">
-                    <img src="assets/img/marioGame.png" alt="">
+                    <img src="assets/img/marioGame.png" alt="marioGame">
                     <div class="overlay">
                         <h3>Juego de Mario</h3>
                         <p>HTML - JS - CSS</p>
@@ -237,7 +237,7 @@
                 </a>
                 <a href="https://luis-angel-santos.github.io/Blackjack/">
                     <div class="proyecto">
-                    <img src="assets/img/blackjack.png" alt="">
+                    <img src="assets/img/blackjack.png" alt="blackjack">
                     <div class="overlay">
                         <h3>BlackJack</h3>
                         <p>HTML - JS - CSS</p>
@@ -246,7 +246,7 @@
                 </a>
                 <a href="https://luis-angel-santos.github.io/PeliculasApp/home">
                     <div class="proyecto">
-                    <img src="assets/img/peliculas.png" alt="">
+                    <img src="assets/img/peliculas.png" alt="peliculas">
                     <div class="overlay">
                         <h3>App de peliculas</h3>
                         <p>Desarrollada haciendo uso de una API</p>
@@ -255,7 +255,7 @@
                 </a>
                 <a href="https://luis-angel-santos.github.io/appClima/">
                     <div class="proyecto">
-                    <img src="assets/img/clima.png" alt="">
+                    <img src="assets/img/clima.png" alt="clima">
                     <div class="overlay">
                         <h3>App del clima</h3>
                         <p>Desarrollada haciendo uso de una API</p>
@@ -264,7 +264,7 @@
                 </a>   
                 <a href="https://luis-angel-santos.github.io/Pagina-de-Comida/">
                     <div class="proyecto">
-                    <img src="assets/img/comida.png" alt="">
+                    <img src="assets/img/comida.png" alt="comida">
                     <div class="overlay">
                         <h3>Página de Restaurante</h3>
                         <p>HTML - CSS - JS</p>
@@ -273,19 +273,28 @@
                 </a>      
                 <a href="https://fisio.netlify.app/">
                     <div class="proyecto">
-                    <img src="assets/img/fisio.png" alt="">
+                    <img src="assets/img/fisio.png" alt="fisio">
                     <div class="overlay">
                         <h3>FISIO</h3>
-                        <p>Angular v15 - TypeScript - NodeJS</p>
+                        <p>Angular v15 - TypeScript - NodeJS - PWA</p>
                         </div>
                     </div>
                 </a>   
                 <a href="https://jokes-app-lasi.netlify.app/">
                     <div class="proyecto">
-                    <img src="assets/img/jokes.png" alt="">
+                    <img src="assets/img/jokes.png" alt="jokes">
                     <div class="overlay">
                         <h3>Jokes App</h3>
                         <p>Angular v15 - TypeScript - NodeJS - Desarrollada haciendo uso de una API</p>
+                        </div>
+                    </div>
+                </a>  
+                <a href="https://heroes-lasi.netlify.app/">
+                    <div class="proyecto">
+                    <img src="assets/img/heroes.png" alt="heroes">
+                    <div class="overlay">
+                        <h3>Héroes App</h3>
+                        <p>Angular v15 - TypeScript - NodeJS - PWA</p>
                         </div>
                     </div>
                 </a>           
