Agregando proyecto TriviasApp - Actualizacion de CV

--- a/index.html
+++ b/index.html
@@ -297,6 +297,15 @@
                         <p>Angular v15 - TypeScript - NodeJS - PWA</p>
                         </div>
                     </div>
+                </a>  
+                <a href="https://trivia-lasi.netlify.app/">
+                    <div class="proyecto">
+                    <img src="assets/img/trivia.png" alt="trivia">
+                    <div class="overlay">
+                        <h3>Trivia App</h3>
+                        <p>Angular v15 - TypeScript - NodeJS - PWA</p>
+                        </div>
+                    </div>
                 </a>           
             </div>
         </div>
