Nueva version de cv, cargo y año de desarrollo

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                             Tlaxcala, México
                         </li>
                         <li>
-                            <strong>Cargo</strong>
-                            <span>Desarrollador de Software JR</span>
+                            <strong>Cargo Actual</strong>
+                            <span> Desarrollador QA </span>
                         </li>
                     </ul>
                 </div>
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <button>
-                <a href="assets/cv.pdf" class="cv-5">Descargar CV <i class="fa-solid fa-download"></i></a>
+                <a href="assets/cv.pdf" class="cv-5">Mí CV<i class="fa-solid fa-download"></i></a>
                 <span class="overlay"></span>
             </button>
         </div>
@@ -128,11 +128,11 @@
     <!-- SECCION SKILLS -->
     <section class="skills" id="skills">
         <div class="contenido-seccion">
-            <h2>Skills</h2>
+            <h2>Habilidades</h2>
             <div class="fila">
                 <!-- Technical Skill -->
                 <div class="col">
-                    <h3>Technical Skills</h3>
+                    <h3>Habilidades Técnicas</h3>
                     <div class="skill">
                         <span>Angular</span>
                         <div class="barra-skill">
@@ -174,9 +174,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- Professional Skills -->
                 <div class="col">
-                    <h3>Soft Skills</h3>
+                    <h3>Habilidades Blandas</h3>
                     <div class="skill">
                         <span>Comunicación</span>
                         <div class="barra-skill">
@@ -360,7 +359,7 @@
             <a href="https://www.linkedin.com/in/dev-web-jr-luisangelsantos/"><i class="fa-brands fa-linkedin-in"></i></a>
             <a href="mailto:santosangel748@gmail.com?Subject=Hey!%20quiero%20contactarte"><i class="fa-solid fa-envelope"></i></i></a>
             <br>
-            <span class="">&copy; 2022 Angel Santos</span>
+            <span class="">&copy; 2023 Angel Santos</span>
         </div>
     </footer>
     <script src="js/main.js"></script>
