Agregando proyecto Sistema de Ventas y otros detalles

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
             <h2>Sobre Mí</h2>
-            <p><span>Hola, soy Luis Angel Santos.</span> Tengo 21 años y actualmente estoy estudiando Desarrollo y Gestión de Software en la Universidad Tecnologica de Tlaxcala. Me enamore de la programación desde los 16 años y desde entonces he tenido un mundo a descubrir. Mi principal area es el desarrollo web, pero soy capaz de manejar distintos ambientes de desarrollo si asi se requiere.</p>
+            <p><span>Hola, soy Luis Angel Santos.</span> Tengo 22 años y actualmente estoy estudiando Desarrollo y Gestión de Software en la Universidad Tecnologica de Tlaxcala. Me enamore de la programación desde los 16 años y desde entonces he tenido un mundo a descubrir. Mi principal area es el desarrollo web, pero soy capaz de manejar distintos ambientes de desarrollo si asi se requiere.</p>
             <p style="text-align: center;">"No documentes el problema; arréglalo"</p>
             <br>
             <div class="fila">
@@ -76,7 +76,7 @@
                         </li>
                         <li>
                             <strong>Cargo Actual</strong>
-                            <span> Desarrollador QA </span>
+                            <span> Desarrollador Java </span>
                         </li>
                     </ul>
                 </div>
@@ -224,6 +224,10 @@
     <section id="portfolio" class="portfolio">
         <div class="contenido-seccion">
             <h2>PORTAFOLIO</h2>
+            <center>
+                <b>Puedes ver el código de cada proyecto en mi GitHub</b>
+            </center>
+            <br>
             <div class="galeria">
                 <a href="https://mariogame-js.netlify.app/">
                     <div class="proyecto">
@@ -303,6 +307,15 @@
                     <div class="overlay">
                         <h3>Trivia App</h3>
                         <p>Angular v15 - TypeScript - NodeJS - PWA</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://sistema-venta-lasi.netlify.app/">
+                    <div class="proyecto">
+                    <img src="assets/img/sistemaVentas.png" alt="ventas">
+                    <div class="overlay">
+                        <h3>Sistema de Ventas</h3>
+                        <p>Angular v15 - C# - MySQL -PWA</p>
                         </div>
                     </div>
                 </a>           
